err/js.xeditable.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/fanstatic'...
Listing './lib/python3.5/site-packages/fanstatic-0.16.egg-info'...
Listing './lib/python3.5/site-packages/js'...
Listing './lib/python3.5/site-packages/js/bootstrap'...
Listing './lib/python3.5/site-packages/js/bootstrap/resources'...
Listing './lib/python3.5/site-packages/js/bootstrap/resources/css'...
Listing './lib/python3.5/site-packages/js/bootstrap/resources/fonts'...
Listing './lib/python3.5/site-packages/js/bootstrap/resources/js'...
Listing './lib/python3.5/site-packages/js/jquery'...
Listing './lib/python3.5/site-packages/js/jquery/resources'...
Listing './lib/python3.5/site-packages/js/jqueryui'...
Compiling './lib/python3.5/site-packages/js/jqueryui/download.py'...
***   File "./lib/python3.5/site-packages/js/jqueryui/download.py", line 115
    print 'downloading', theme_name
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/js/jqueryui/resources'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/base'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/base/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/black-tie'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/black-tie/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/blitzer'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/blitzer/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/bootstrap'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/bootstrap/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/cupertino'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/cupertino/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/dark-hive'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/dark-hive/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/dot-luv'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/dot-luv/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/eggplant'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/eggplant/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/excite-bike'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/excite-bike/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/flick'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/flick/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/hot-sneaks'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/hot-sneaks/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/humanity'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/humanity/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/le-frog'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/le-frog/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/mint-choc'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/mint-choc/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/overcast'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/overcast/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/pepper-grinder'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/pepper-grinder/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/redmond'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/redmond/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/smoothness'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/smoothness/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/south-street'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/south-street/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/start'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/start/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/sunny'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/sunny/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/swanky-purse'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/swanky-purse/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/trontastic'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/trontastic/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/ui-darkness'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/ui-darkness/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/ui-lightness'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/ui-lightness/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/vader'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/themes/vader/images'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/ui'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/ui/i18n'...
Listing './lib/python3.5/site-packages/js/jqueryui/resources/ui/minified'...
Listing './lib/python3.5/site-packages/js/xeditable'...
Listing './lib/python3.5/site-packages/js/xeditable/resources'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/bootstrap-editable'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/bootstrap-editable/css'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/bootstrap-editable/img'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/bootstrap-editable/js'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/css'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/img'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/jquery-ui-datepicker'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/jquery-ui-datepicker/css'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/jquery-ui-datepicker/css/redmond'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/jquery-ui-datepicker/js'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jquery-editable/js'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jqueryui-editable'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jqueryui-editable/css'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jqueryui-editable/img'...
Listing './lib/python3.5/site-packages/js/xeditable/resources/jqueryui-editable/js'...
Listing './lib/python3.5/site-packages/js.bootstrap-3.3.4.egg-info'...
Listing './lib/python3.5/site-packages/js.jquery-1.9.1.egg-info'...
Listing './lib/python3.5/site-packages/js.jqueryui-1.10.3.egg-info'...
Listing './lib/python3.5/site-packages/js.xeditable-1.4.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
